--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/2024-028-01.jpg');
+    background-image: url('img/preguica-1.jpg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
