--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --laranja-claro: #e00de0;
     --alto-contraste-fundo: #000000;
     --alto-contraste-texto: #ffffff;
-    --alto-contraste-link: #ffd700;
+    --alto-contraste-link: #ff00d4;
 }
 
 body {
